--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         <source src="/assets/media/Creedence Clearwater Revival   I Heard It Through The Grapevine (Official Music Video.mp3"type="audio/mpeg" >
         </audio>
         <div class="video">
-        <video autoplay loop poster width="100%" >
-          <source src="/assets/media/1026135182-preview.mp4" type="video/mp4">          
-        </video>
+          <video class="video" autoplay loop poster>
+           <source src="/assets/media/pneu.mp4" type="video/mp4">          
+         </video>
         <!-- <div class="centralizador">
           <div class="ajustador-2">
             <div class="avatar">
@@ -103,7 +103,6 @@
                 <img class="circulo html"src="/assets/img/html-circle.png"alt="css"/>
                 <img class="circulo js"src="/assets/img/js-circle.png"alt="js"/>
               </div> -->
-            </div>
             <div class="sobre-mim">
               <h2>Sobre mim</h2>
               <br />
